--- a/be/assets/sass/dashboard.scss
+++ b/be/assets/sass/dashboard.scss
@@ -1,4 +1,11 @@
 .dashboard {
+  .base-color {
+    color: $base-color !important;
+  }
+  .text-base {
+    font-size: 1.3rem;
+    line-height: 1.5rem;
+  }
   .left-navigation {
     border-right: 2.5px solid #f5f5f5;
     // width: 320px !important;
@@ -6,6 +13,21 @@
       margin-top: 0.5em;
       img {
         max-width: 65px;
+      }
+    }
+    .navigation-list {
+      .v-list-group {
+        // :hover {
+        //   background-color: $base-color;
+        //   color: white;
+        //   i {
+        //     color: white;
+        //   }
+        // }
+      }
+      .v-list-item--active {
+        background-color: $base-color;
+        color: white;
       }
     }
   }
