--- a/be/assets/sass/dashboard.scss
+++ b/be/assets/sass/dashboard.scss
@@ -13,8 +13,15 @@
     font-size: 1.3rem;
     line-height: 1.5rem;
   }
+
   .text-white {
     color: white !important;
+  }
+  .w-full {
+    width: 100% !important;
+  }
+  .pointer {
+    cursor: pointer;
   }
   .left-navigation {
     // border-right: 2.5px solid white;
@@ -36,9 +43,7 @@
 
   .main-content {
     background-color: $base-background-color;
-    .w-full {
-      width: 100% !important;
-    }
+
     .custom-table {
       th {
         font-size: 1em !important;
